--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,6 @@ plugins {
 
 android {
     compileSdkVersion versions.compileSdkVersion
-    buildToolsVersion versions.buildToolsVersion
 
     defaultConfig {
         applicationId "com.github.weg_li_android"
@@ -24,6 +23,7 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.debug
         }
     }
     compileOptions {
@@ -33,6 +33,7 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    namespace 'com.github.weg_li_android'
 }
 
 dependencies {
@@ -48,9 +49,7 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:$versions.glideVersion"
 
     // koin
-    implementation "org.koin:koin-android:$versions.koinVersion"
-    implementation "org.koin:koin-android-scope:$versions.koinVersion"
-    implementation "org.koin:koin-android-viewmodel:$versions.koinVersion"
+    implementation "io.insert-koin:koin-android:$versions.koinVersion"
 
     // kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlinVersion"
@@ -60,7 +59,7 @@ dependencies {
     implementation "com.jakewharton.timber:timber:$versions.timberVersion"
 
     implementation 'android.arch.lifecycle:extensions:1.1.1'
-    implementation 'com.amitshekhar.android:rx2-android-networking:1.0.2'
+    implementation 'com.github.amitshekhariitbhu.Fast-Android-Networking:rx2-android-networking:1.0.4'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.18'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 
